# ChangeLog for dev-lang/gnat-gcc
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/gnat-gcc/ChangeLog,v 1.70 2015/05/14 18:38:14 pacho Exp $

  14 May 2015; Pacho Ramos <pacho@gentoo.org> gnat-gcc-4.3.6.ebuild,
  gnat-gcc-4.4.7.ebuild, gnat-gcc-4.5.4.ebuild, gnat-gcc-4.6.4.ebuild:
  Reverse previous stabilization done by error

  13 May 2015; Pacho Ramos <pacho@gentoo.org> -gnat-gcc-4.4.3.ebuild,
  -gnat-gcc-4.4.5.ebuild:
  Drop old

  13 May 2015; Pacho Ramos <pacho@gentoo.org> gnat-gcc-4.3.6.ebuild,
  gnat-gcc-4.4.7.ebuild, gnat-gcc-4.5.4.ebuild, gnat-gcc-4.6.4.ebuild:
  Add doc and lto USEs as they are used from eclass for this version (#515408)

  05 Aug 2014; Raúl Porcel <armin76@gentoo.org> gnat-gcc-4.3.5.ebuild,
  gnat-gcc-4.4.3.ebuild, gnat-gcc-4.4.5.ebuild, gnat-gcc-4.4.7.ebuild,
  gnat-gcc-4.5.4.ebuild, gnat-gcc-4.6.4.ebuild:
  Drop sparc keywords

  25 Nov 2013; Steve Arnold <nerdboy@gentoo.org> gnat-gcc-4.5.4.ebuild,
  gnat-gcc-4.6.4.ebuild, +files/gnat-gcc-4.5.4-tex-version-workaround.patch:
  Updates (and a patch from Martin von Gagern) for texinfo borkage. Closes
  bug #483192). Upstream patches only go back to 4.6.4 so the workaround 
  uses the aforementioned patch to disable info docs if texinfo-5.x is 
  installed and the doc USE flag is enabled.

  20 Nov 2013; Steve Arnold <nerdboy@gentoo.org> gnat-gcc-4.6.4.ebuild:
  Adding openmp USE flag for updated gnatbuild.eclass.

*gnat-gcc-4.6.4 (14 Nov 2013)

  14 Nov 2013; Steve Arnold <nerdboy@gentoo.org> +gnat-gcc-4.6.4.ebuild,
  metadata.xml:
  Adding new 4.6.4 version to go with updated gnatbuild.eclass (arm 
  updates to come later). Yay, I'm still alive...

  08 Oct 2013; George Shapovalov <george@gentoo.org> gnat-gcc-4.4.7.ebuild:
  propagating texinfo fix to 4.4, should resolve #484794

  03 Aug 2013; George Shapovalov <george@gentoo.org> gnat-gcc-4.3.5.ebuild,
  gnat-gcc-4.3.6.ebuild: