@@ -28,7 +28,7 @@ DIST gnatboot-4.1-amd64.tar.bz2 15314736 SHA256 a4016920b84f5934ec7120c7bb17c102
 DIST gnatboot-4.1-i386.tar.bz2 15367514 SHA256 597b4a16f38fb173b1eecc259c1566ccf81291e13b88e2160102a512cefcc518
 DIST gnatboot-4.1-ppc.tar.bz2 13651598 SHA256 2c9ed035b964a7dfcc427cb5c16dc30d3b99276fb424d25b0ebfde23a68013eb
 DIST gnatboot-4.3-amd64.tar.bz2 20294401 SHA256 3506500b4cda06eaaf9bb70ec26fbe9be2a05b1f8edf0b2f7aeceb451a558333 SHA512 29a74d636d3566cd01ae3ed99c7b71146ee971639ad119dfacc4b502c76f8556cbf7a7f2d1d95b4dc85dcaebff1ab89244e2ee6c063ce0888f915bd7c8a6faeb WHIRLPOOL c4b83d27063b5a888f705d3c8ec404bb11573e9376d3e0704a47be59e057fa5b9a62e6807ae72a0fd2b7c198bcc1584fb6b4e1d2d09054a03cc73a8a16a4b17a
-DIST gnatboot-4.3-i686.tar.bz2 16065767 SHA256 7afbea3216c24dde950d7d511e5fc897db5e5c8099ff4a524048519abc54f0b9
+DIST gnatboot-4.3-i686.tar.bz2 16065767 SHA256 7afbea3216c24dde950d7d511e5fc897db5e5c8099ff4a524048519abc54f0b9 SHA512 5e3efd9e6974f2f47cc61937e5fb347cf27c9bc172b74422612a45dae8f4db89907b2b1ba15a0dad4c9a0fe244d43b99f664c2c23eb7050932747d0768c0c543 WHIRLPOOL 9d1473811aff2e2c45de30ad4557ce7ca4db1c7f38f9ef600cb7cb65823046fcf85a42a208dcb59bac796fc70cbfe3e5eccf9cb141ba3fe5a8178d38e4f0e6db
 DIST gnatboot-4.3-sparc.tar.bz2 13065130 SHA256 e234336123fd65c0f73cd25af99dbb439ea08f0286fe7f5b1e05dd414b9878e7
 DIST gnatboot-4.4-amd64.tar.bz2 26117669 SHA256 fd6c6ea6e4d57eb178d239a8b1e4d99d6638cb9d7d322c0789b37e8ed6a49b67 SHA512 bf68582e8e8ecc9c4f4dbec90ef47edf10769ca7a2dd197b065f44e5ad1e40b81c44592bb362651654b187ebad972095176509273b5e98edc1a26c2164075d80 WHIRLPOOL 59d714a3ea70dae7c4b9e6d177336810bbb5ea7bcdbe038c7c34d543ef8c45f40d240ecbc58de1b49c88904b245cdd3ef9121bc88fa3bdecf413762f67301cde
 DIST gnatboot-4.4-i686.tar.bz2 17194327 SHA256 1081cdf2514fd1c03b40f0923d0046ffd2886b3bc6eabd217eaa40da1765ba5b SHA512 29a4e32d178f065ceef88efc9bae3bd2b68553e34d485b929e055733ceabdaf172c58ab92f24340d8a46fdbb1565e5f7573b744e3931ed261aaeb488c40501e6 WHIRLPOOL 80987d40ddf7589a74c6280dd687ad442ee7a560c5bb2eece950c50fcf0bfaa38e2befeec72e6fbf2695bb9d89ecfe905cf894152a56b22c7384926a59ce4f11
@@ -37,16 +37,16 @@ EBUILD gnat-gcc-3.4.6.ebuild 1185 SHA256 e45f80c083976171c820118d8cc0ebbdc4ccfdd
 EBUILD gnat-gcc-4.1.2.ebuild 1731 SHA256 86d0b854f2627d7d4946d0242949d88092e8806cd0e83782f740d2a5f602f9e3 SHA512 a93bfaf700941980b0de3ca4149d3924f6624e7428ed1899f22597151d652cff419b220b5434931bddbcb1159990cfe24bca571e4822b667d951ce9588c907c9 WHIRLPOOL 3cf36eba78f3786d18afee579a5efb5988edf4321aa03f3bfd73a033b0c5cf7bedd8ff6d67b51ffbc4ade50c81c349c7f1d4ec01a2f385cff92c24a9dc1170f4
 EBUILD gnat-gcc-4.2.3.ebuild 1803 SHA256 d15c61da75cefbe65bf959a908e9b6220979d61021b874bab17cabf15db33430 SHA512 2293a1645cfb382ff83de5cbc15f17cde262b397808d390ce0a197313d175016c1b8a4783ad9b7433a35c70b6e66204b0eff2c6af56382db0e28b1464e60f7db WHIRLPOOL 5c5c39d1efddd946480aa0bb9ffa83e7410553931a7f7e3433f1d994eafa20c4c75ed94fdcf7292e217c9da01e540540342876b0a0f1f9a32eac68c0f51ab960
 EBUILD gnat-gcc-4.3.5.ebuild 2515 SHA256 9d60b845aacf805d6129a272ce3fc91b54814aa7ae78a9be4a6098bf72abe56d SHA512 f3c6cfbf71e38df06c720217ece9fcbfca7e6ddf6881f55cb406ff08b9e4a827c26d0dfafde30959b77735037e093a8b83a9afb9712e3b95dfd0a3f88cdda6b8 WHIRLPOOL d276672eed31f999f12b26001509c72043c979737be3e4da51664e85c31fb26908d10b8e5427835983e617c48e4b4410bf27eae99814420e5119b233b1406bae
-EBUILD gnat-gcc-4.3.6.ebuild 2258 SHA256 fb0ba39bb92d98558bfaa30ae90c1abf62f2b107d703e5139c083e8f2bd6fac7 SHA512 8286bcd57e9cf71e821c3184658a14b5d73504ed7b2505f2b6fbbb6e40daeea7a280015373802475ffb9071db27ba7f8af47f5ea4a07febe0026888d501515b4 WHIRLPOOL 517c3eedd01e286366f57d518e6a5df162198d87a963ae92451e30d525612b6ccfa64a028992b4723e090ffb34740e7b373be96a244afb555101da088e07d461
+EBUILD gnat-gcc-4.3.6.ebuild 2256 SHA256 04e9f286937b4de08d573de7180a0471f383223a15b9b8b7ae15650f837978f2 SHA512 3368eb440a107fcef727ad2ec82ca63a2a1ed16e39a144c5265ed6b9e551f5087c1d1d3b8f2710d5a443f2ac95a0142d8690d62d38acd7f9a80cbe7fabd7cd24 WHIRLPOOL e94254773285b8bed4df985d81fa6af1aeac7d587707f681643d3b2f915b7049a1de1c47debb4f431c84d123f44768e3c67f451ba10031c5fd4ccc8439ffaadf
 EBUILD gnat-gcc-4.4.7.ebuild 2092 SHA256 c03d7bb845d913bb79aa4e7ee6c037e83f1d8c9beb8c120cea23622d84ceddf9 SHA512 76a0d8364bb8da269fe992488d3932f756292db07ac002cff6669790caa3b52ad31d21d3f6be26b7f807e2c28598cada4c5555457177c38282dbd99dd784f011 WHIRLPOOL ca9dc8ba4178b63f9cb0179ce407c68d7d9c9bfe0368cc9555f85a63baa83abfe3753add181418904db0e67538a60700886bd2dd18c0273b3c62998a74c9eadb
-EBUILD gnat-gcc-4.5.4.ebuild 2543 SHA256 6c02e691d65b5da38c75a8a2d1d1a0d53d8707cdcf12edc5c76d60100884696e SHA512 60e441cd041b33d3094723c120ac2f85aed643eddba856de8590cc83ac400d5e6c76b036d4c7204e9f3424d51d1b9cb9452164c580d208ce997a1e47813cd02d WHIRLPOOL d3b5bc2b53fd21a777897965904369c2a6b395dcff2454426e9fbd968d2e44f0bc3c3cfa259c056ab04616dce6ec05da6e639fefa24e6ec3dff9614442ee2a6d
-EBUILD gnat-gcc-4.6.4.ebuild 1993 SHA256 f1f5ae249705dea97af95be41f7ddf7da1c376f1db07472ef873a83446f400cf SHA512 d49f2aee4f221511aee6e6f2b392bebe50e6c51c4eb4133f08f878e1ea487b49ab147f773cf35d8a3a18ff781da5451457040a08ae7d50c42abe14ec170913d5 WHIRLPOOL e67286412aad02598aac20314f3fd045e676daa724b181c896389d3f0152c7ce2da1a2eed09fd150042d7e7e890e9bda2d789216ab1aed1e9dcb604b2e211371
-MISC ChangeLog 11164 SHA256 22086ad0b57c3a73bf72e5c83b67ee87707dc55655032928efd36174593368aa SHA512 9e9cd6d6540cbc0ba76818f4c1d14cab3da4479bbf81aa3cfac0a29eb25cbe017254cff325690c2edadbbb7e54fb314acd53e11c251d6532e99f949a346435a3 WHIRLPOOL 3bb07000d85b2cdcc0b8b301df04f927d2f57f8a7ce9345f597d6abbb0571913cabb32a1288bd56f57f74c1c5d435719c6893147b5d38e423db0e967a9946f80
+EBUILD gnat-gcc-4.5.4.ebuild 2541 SHA256 c394459b2b6576e155896286b59ad7fd02b92c34586099b865aaacbe73d3fb47 SHA512 a987683750397e9a5592e5e986a46e2c9fef1de25a75eadb50a1bb81a0409d5a1063dc9266f40ed2269f89aa1561e07bc1f971881f592168a5e54159eb8b947f WHIRLPOOL 5e7c2e1459cae6505120d1a1364767297e71fb7134a4ecb634e5a07e99158cae8ec784b776cbe17d3c8803a8ae14821198ed5a09cebf7dcf6f0f08c576b2763c
+EBUILD gnat-gcc-4.6.4.ebuild 1991 SHA256 b376d26e25a5eaaf14682e6dc71473504c698c912e070c7878ed94ed4ed7d971 SHA512 bc715255fcc0be2139e596dcfaa1e81b865aa0619e5a8f478949001c8bb101ab0c9f2fb22e787ecfe982b98e4b5d44d3e2f05ba134e599910faf9980763d4da6 WHIRLPOOL 70348e570e48691e62b940b0df43aee3849febabf10ecca0e0994b5e606f5dfd55eda960581e7ad33326bd41b57323330445f7bd57597074398f9e32a5941042
+MISC ChangeLog 11314 SHA256 195be83782c9d9192a654b8ee4eb2c42b97f5e5241549a061e69c8d0f79f1538 SHA512 b61923b9f7be3e769a958ff647d22c339829bdc7719c482f862934676ebf1d01becf4cd3ae88960f6889c97a7c7f0ea4db456629b88005e6a6726418d0478669 WHIRLPOOL 97f184ce8e303245b14ac6a59587934d234d0437c592cfd45f5e47ddd6599582e842bd5921f77cf2d8d5a452dddf90530582c15ab44c3f02cbbb0abf9a657bb1
 MISC metadata.xml 614 SHA256 db7a6a94f4224597fec6c28449a912ddf1f1056ddaa67e8831992447797b45ec SHA512 1bd595c9a5c67706b36af5cc0941d338d4b0beab089412f681e4633c454a80e218fc8adae94c7c6f05ad61fa65363f0b8caca634acc9b6a1e67acab3d6018e74 WHIRLPOOL 619a3ec6bc2a059aa1a66340d1cde2ee21f765436112efff6f4ac468b59c7f5a219c097b22dc7311bb74ff70e3b714573acbef79bdfee2a513f83e7820f6216f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVU65gACgkQCaWpQKGI+9TieACfXqBLJRThTtqXXjB9UnUvx/WJ
-BkwAnjapgi0qE6nx/OUUQWDmiBgguwWS
-=lrND
+iEYEAREIAAYFAlVV/6AACgkQCaWpQKGI+9RnuQCfZLRQhZImXUDJUFAl97V0egHg
+G4sAn0e3L2y9pUP9QBZDqBuCWSi51/AL
+=1Xie
 -----END PGP SIGNATURE-----
