@@ -3,10 +3,10 @@ DEPEND=>=dev-libs/mpfr-2.3.1 >=dev-libs/gmp-4.2.2 >=sys-libs/zlib-1.1.4 >=sys-li
 DESCRIPTION=GNAT Ada Compiler - gcc version
 HOMEPAGE=http://gcc.gnu.org/
 IUSE=doc lto nls
-KEYWORDS=~amd64 ~ppc ~x86
+KEYWORDS=amd64 ~ppc x86
 LICENSE=GMGPL
 RDEPEND=>=dev-libs/mpfr-2.3.1 >=dev-libs/gmp-4.2.2 >=sys-libs/zlib-1.1.4 >=sys-libs/ncurses-5.2-r2 app-eselect/eselect-gnat
 SLOT=4.3
 SRC_URI=ftp://gcc.gnu.org/pub/gcc/releases/gcc-4.3.6/gcc-core-4.3.6.tar.bz2 ftp://gcc.gnu.org/pub/gcc/releases/gcc-4.3.6/gcc-ada-4.3.6.tar.bz2 amd64? ( http://dev.gentoo.org/~george/src/gnatboot-4.3-amd64.tar.bz2 ) x86? ( http://dev.gentoo.org/~george/src/gnatboot-4.3-i686.tar.bz2 ) ppc? ( http://dev.gentoo.org/~george/src/gnatboot-4.1-ppc.tar.bz2 )
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	fixheadtails	c6fd1fc49c9dc11924f28a1406f251a0	flag-o-matic	5d5921a298e95441da2f85be419894c0	gnatbuild	9cbf8169ed43b7ceec3983707ff67324	gnuconfig	00a0530e40148c254cebb925df0e87ef	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	dfe060cb70d89757fde5c1ff8405e950	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=f28e090db2853e9ff44432dee6d0bd0f
+_md5_=fe14ea05b50164063f1a35b8683e5361
