@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/gnat-gcc
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/gnat-gcc/ChangeLog,v 1.70 2015/05/14 18:38:14 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/gnat-gcc/ChangeLog,v 1.71 2015/05/15 14:15:58 pacho Exp $
+
+  15 May 2015; Pacho Ramos <pacho@gentoo.org> gnat-gcc-4.3.6.ebuild,
+  gnat-gcc-4.5.4.ebuild, gnat-gcc-4.6.4.ebuild:
+  amd64/x86 stable, bug #379983
 
   14 May 2015; Pacho Ramos <pacho@gentoo.org> gnat-gcc-4.3.6.ebuild,
   gnat-gcc-4.4.7.ebuild, gnat-gcc-4.5.4.ebuild, gnat-gcc-4.6.4.ebuild:
